refactor: Remove DeveloperDTO and related DTOs part 2